<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyActionBar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">My Action Bar Demo</string>
    <string name="action_search">Search</string>

    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string-array name="dropdown">
        <item>First Item</item>
        <item>Second Item</item>
    </string-array>
</resources>